--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,40 @@
 .baseHeader {
-    background-color: #73726E;
+    /* background-color: rgba(128, 128, 128, 0.789); */
     border-radius: 15px;
-    border: 3px solid #7A925C;
+    display: flex;
+    justify-content:space-between;
+    color: #9fd86b;
+    align-items: center;
+}
+
+.logoName {
+    display: flex;
 }
 
 .img {
-    width: 100px;
+    width: 70px;
     margin-right: 40px;
+}
+
+@keyframes spin {
+    from {}
+    to {
+        rotate: -360deg;
+    }
+  }
+  
+  .img:hover {
+    animation-name: spin;
+    animation-duration: 1.5s; 
+    animation-iteration-count:infinite;
+  }
+
+.imgLogo {
+    margin-left: 10px;
+}
+
+.imgGithubIn {
+    margin-right: 10px;
 }
 
 .developerText {
@@ -22,18 +50,10 @@
     transition: opacity 0.5s ease; 
 }
 
-.imgContainer:hover .developerText {
-    opacity: 1; 
-    text-shadow: 2px 2px 2px rgb(79, 154, 74);
-}
 
 
 
-.img:hover {
-    animation-name: gift;
-    animation-duration: 1.9s; 
-    animation-iteration-count: 1;
-}
+
 
 @keyframes gift {
     from {}
@@ -60,16 +80,6 @@
     }
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    color: rgb(255, 255, 255);
-    align-items: center;
-}
-
-.between {
-    width: 33vh;
-}
 
 .boxNav {
     display: grid;
@@ -90,7 +100,7 @@
 }
 
 .btnNav a {
-    text-decoration: none; /* Quítale el subrayado a los enlaces */
+    text-decoration: none;
 }
 .btnNav:hover {
     border: 3px solid #8dde7b;
