--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,9 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 1.2rem;
     margin: 0;
-    padding: 0;
+    padding: 5px;
     text-align: center;
+    font-family: inherit;
 }
 
 /*--------PALETA DE COLORES --------*/
