--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -19,8 +19,7 @@
   color: aliceblue;
   border-radius: 10px;
   width: 100%;
-  background-color: rgba(128, 128, 128, 0.789);
-  margin-top: 100px;
+  background-color: #095169a1;
   padding-bottom: 15px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
