--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,18 @@
 body {
-    background-color: #ffffff;
-    color: #0c0636;
+    background-color: #0c0636;
+    color: #ffffff;
     font-family: 'Roboto', sans-serif;
     font-size: 1.2rem;
     margin: 0;
     padding: 5px;
-    text-align: center;
     font-family: inherit;
+}
+
+.skills {
+    background-color: #ffffff9c;
+    border-radius: 10px;
+    padding: 10px;
+    
 }
 
 /*--------PALETA DE COLORES --------*/
