--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
 
 .color1 { color:  #0c0636 };
 .color2 { color:  #095169 };
-.color3 { color:  #059b9a };
+.color3 { color:  #53ba83 };
 .color4 { color:  #53ba83 };
 .color5 { color:  #9fd86b };
 
