--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,13 @@
     gap: 10px;
 }
 
+.flexBetween {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
 .hello {
     position: relative;
 }
@@ -16,4 +23,10 @@
 .imgHombre {
     position: relative;
     z-index: -1;
+}
+
+.paddingApp {
+    padding-left: 40px;
+    padding-right: 40px;
+    border-radius: 10px;
 }
