--- a/src/components/BtnLink/BtnLink.css
+++ b/src/components/BtnLink/BtnLink.css
@@ -1,20 +1,23 @@
 .BtnLink {
-    display: inline-block;
+    display: flex;
     padding: 10px 20px;
-    color: #fff;
-    background-color: #007BFF;
+    color: #0c0636;
+    background-color: #dddddd;
     border: none;
     border-radius: 5px;
     text-decoration: none;
     text-align: center;
-    font-size: 16px;
+    justify-content: center;
+    font-size: 20px;
     transition: background-color 0.3s ease;
+    margin-top: 20px;
+    margin-right: 10px;
 }
 
 .BtnLink:hover {
-    background-color: #0056b3;
+    background-color: #9c9c9c;
 }
 
 .BtnLink:active {
-    background-color: #004085;
+    background-color: #616161;
 }
