--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -50,7 +50,9 @@
     opacity: 1;
 }
 
-
+.space-between {
+    justify-content: space-between;
+}
 
 .cardProject:hover .imgProject {
     opacity: 0.1; 
@@ -61,4 +63,10 @@
     z-index: 10;
     position: relative;
     margin: 100px;
+}
+
+.btnsLink {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
 }
