--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -9,8 +9,8 @@
     height: 100%;
     padding:10px;
     box-sizing: border-box;
-    background-color: #095169;
+    /* background-color: #0c0636; */
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(89, 89, 89, 0.5);
+    box-shadow: 0 0 10px #9fd86b;
 }
 
