--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #0c0636;
-    color: #ffffff;
+    background-color: #000000;
+    color: #a7a7a7;
     font-family: 'Roboto', sans-serif;
     font-size: 1.2rem;
     margin: 0;
@@ -8,12 +8,12 @@ body {
     font-family: inherit;
 }
 
-.skills {
+/* .skills {
     background-color: #ffffff9c;
     border-radius: 10px;
     padding: 10px;
     
-}
+} */
 
 /*--------PALETA DE COLORES --------*/
 
