--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -9,7 +9,7 @@
     height: 100%;
     padding:10px;
     box-sizing: border-box;
-    /* background-color: #0c0636; */
+    background-color: #a0d86b0e;
     border-radius: 10px;
     box-shadow: 0 0 10px #9fd86b;
 }
