--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
     background-color: #000000;
-    color: #a7a7a7;
+    color: #fff;
     font-family: 'Roboto', sans-serif;
     font-size: 1.2rem;
     margin: 0;
