--- a/src/App.css
+++ b/src/App.css
@@ -20,14 +20,13 @@
     position: relative;
 }
 
+.reverse {
+    flex-direction: row-reverse;
+}
+
 .imgHombre {
     width: 500px;
     position: relative;
     z-index: -1;
 }
 
-.paddingApp {
-    padding-left: 40px;
-    padding-right: 40px;
-    border-radius: 10px;
-}
