--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,13 +13,13 @@
 
 .footer {
   margin-top: auto;
-  
+  margin-top: 100px;
   bottom: 0;
   width: 100%;
   color: aliceblue;
   border-radius: 10px;
   width: 100%;
-  background-color: #095169a1;
+  box-shadow: 0 0 10px #9fd86b;
   padding-bottom: 15px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
