--- a/src/components/NumberGames/NumberGames.css
+++ b/src/components/NumberGames/NumberGames.css
@@ -1,9 +1,11 @@
 .baseGessTheNumber {
     background-image: url("../../images/tablon.jpg");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-bottom: 100px;
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-bottom: 100px;
+    border-radius: 50px;
+    margin: 20px;
 }
 
 /*  GLOVAL */
@@ -79,8 +81,6 @@
 .title {
     color: aliceblue;
     font-size: 50px;
-    margin-left: 30px;
-    margin-right: 30px;
     background-image: url("../../images/posit.jpg");
     background-position: center;
     border-radius: 7px;
