--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -124,6 +124,16 @@
 }
 
 .linkNavbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
-    color: #fff;
+    color: #8dde7b;
+    padding: 10px;
+    border: 1px solid #8dde7b;
+    border-radius: 10px;
+} .linkNavbar:hover {
+    background-color: #8dde7b;
+    color: #000;
+    transition: all 0.3s ease-in-out;
 }
