--- a/src/components/Greeting/Greeting.css
+++ b/src/components/Greeting/Greeting.css
@@ -1,12 +1,35 @@
 .boxGreeting {
-    margin-left: 30px;
-    margin-right: 30px;
+    margin: 30px;
+    padding-bottom: 50px;
+}
+
+.helloImg {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.textStart {
+    justify-content: start;
+    font-size: 28px;
 }
 
 .imgMen {
     width: 500px;
     z-index: -2;
+    position:static;
     
+}
+
+.divMen {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .myDescription a {
@@ -20,8 +43,12 @@
 }
 
 .boxDescription {
-    width: 700px;
+    width: 70%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .myDescription {
@@ -45,7 +72,60 @@
     transition: all 0.3s ease-in-out;
 }
 
-@media screen and (max-width: 1126px) {
+@media screen and (max-width: 1450px) {
+    .textStart {
+        font-size: 25px;
+    }
+
+    .imgMen {
+        width: 350px;        
+    }
+
+    .boxGreeting {
+        margin: 15px;
+    }
+}
+
+@media screen and (max-width: 1026px) {
+    
+
+    .boxDescription {
+        width: 100%;
+    }
+
+    .helloImg {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 853px) {
+    
+    .boxDescription h1 {
+        font-size: 30px;
+        width: 100%;
+    }
+
+    .textStart {
+        text-align: center;
+    
+    }
+
+    .boxDescription {
+        width: 100%;
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 445px) {
+    .imgMen {
+        width: 240px;        
+    }
+}
+
+/* @media screen and (max-width: 1126px) {
     .imgMen {
         width: 350px;        
     }
@@ -54,6 +134,7 @@
 @media screen and (max-width: 970px) {
     .boxDescription h1 {
         font-size: 30px;
+        width: 100%;
     }
     .boxGreeting {
        font-size: 20px;
@@ -82,3 +163,9 @@
         width: 400px;
     }
 }
+
+@media screen and (max-width: 455px) { 
+    .boxDescription {
+        
+    }
+} */
