--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,3 +1,26 @@
+.boxProjects {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+
+.shadowProject {
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, #a0d86b1f 1%, rgba(0,212,255,0) 80%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+
+.widthIcon {
+    width: 30px;
+
+}
+
 .column {
     flex-direction: column;
 }
@@ -33,23 +56,21 @@
 
 .cardProject {
     margin: 15px;
-    background-color: #a0d86b0e;
+    background-color: #000000;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    
     margin-top: 20px; 
-    width: 100%;
-    max-width: 650px;
-    /* height: ; */
+    width: 1100px;
+    height: 100%;
     padding:10px;
     box-sizing: border-box;
     border-radius: 10px;
     box-shadow: 0 0 10px #9fd86b;
     overflow: hidden;
 }
-.cardProject:hover .description {
+.cardProject:hover .descriptionProject {
     opacity: 1;
     transform: scale(1.2);
     transition: all 0.3s ease-in-out;
@@ -63,7 +84,7 @@
     opacity: 0.1; 
 }
 
-.description {
+.descriptionProject {
     opacity: 0;
     z-index: 10;
     position: relative;
@@ -76,9 +97,51 @@
     margin-top: 20px;
 }
 
+.boxH3 {
+    width: 100%;
+}
+
+
+
 @media screen and (max-width: 1440px) {
     .flexCenter {
         flex-direction: column;
     }
+
+    .cardProject {
+        width: 100%;
     
+    }
+    
+}
+
+@media screen and (max-width: 1024px) {
+    .cardProject {
+        width: 550px;
+    }
+    
+}
+
+@media screen and (max-width: 619px) {
+    .cardProject {
+        width: 350px;
+    }
+
+    .descriptionProject {
+        margin: 40px;
+    }
+
+    .widthIcon {
+        width: 25px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .shadowProject h3 {
+        font-size: 1.2rem;
+    }
+
+    .boxH3 {
+        width: 90%;
+    }
 }
