--- a/src/components/NumberGames/NumberGames.css
+++ b/src/components/NumberGames/NumberGames.css
@@ -21,7 +21,7 @@
 .flex3 {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     width: 100%;
 }
 
