--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -8,7 +8,7 @@
 
 .shadowProject {
     background: rgb(255,255,255);
-    background: radial-gradient(circle, #a0d86b1f 1%, rgba(0,212,255,0) 80%);
+    background: radial-gradient(circle, #8d8d8d1f 1%, rgba(0,212,255,0) 80%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -109,7 +109,7 @@
     }
 
     .cardProject {
-        width: 100%;
+        width: 600px;
     
     }
     
