--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -122,6 +122,7 @@
 }
 
 .linkNavbar {
+    background-color: #ffffff00;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -134,4 +135,8 @@
     background-color: #8dde7b;
     color: #000;
     transition: all 0.3s ease-in-out;
+}
+
+.textNone {
+    text-decoration: none;
 }
