--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -135,7 +135,13 @@
     background-color: #8dde7b;
     color: #000;
     transition: all 0.3s ease-in-out;
+} .activeLink {
+    /* Estilos cuando el enlace está activo */
+    background-color: #8dde7b;
+    color: #000;
+    transition: all 0.3s ease-in-out;
 }
+  
 
 .textNone {
     text-decoration: none;
