--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -124,23 +124,39 @@
 .linkNavbar {
     background-color: #ffffff00;
     display: flex;
+    cursor: pointer;
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    color: #8dde7b;
+    color: #9FD86B;
     padding: 10px;
-    border: 1px solid #8dde7b;
+    border: 1px solid #9FD86B;
     border-radius: 10px;
+    position: relative; 
+} .linkNavbar::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -10px; 
+    width: 100%;
+    height: 2px; 
+    background-color: #9FD86B; 
+    transition: all 0.3s ease-in-out;
+    opacity: 0; 
+} .linkNavbar.activeLink::after { 
+    opacity: 1;
 } .linkNavbar:hover {
-    background-color: #8dde7b;
+    background-color: #9FD86B;
     color: #000;
     transition: all 0.3s ease-in-out;
-} .activeLink {
-    /* Estilos cuando el enlace está activo */
-    background-color: #8dde7b;
+} .activeLink { /* Estilos enlace activo */
+    position: relative;
+    cursor: default;
+    background-color: #9FD86B;
     color: #000;
     transition: all 0.3s ease-in-out;
 }
+
   
 
 .textNone {
