--- a/src/components/Greeting/Greeting.css
+++ b/src/components/Greeting/Greeting.css
@@ -1,4 +1,7 @@
 .boxGreeting {
+    display: flex;
+    flex-direction: column;
+    
     margin: 30px;
     padding-bottom: 50px;
 }
@@ -19,7 +22,7 @@
 }
 
 .imgMen {
-    width: 500px;
+    width: 300px;
     z-index: 2;
     position:static;
     
