--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,21 @@
 
 
 .color2 {
-    color: #9fd86b;
+  color: #9fd86b;
 }
 
 .flexCenter {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .flexBetween {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
 }
 
 .hello {
@@ -23,13 +23,13 @@
 }
 
 .reverse {
-    flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .imgHombre {
-    width: 500px;
-    position: relative;
-    z-index: -1;
+  width: 500px;
+  position: relative;
+  z-index: -1;
 }
 
 
@@ -38,121 +38,127 @@
 
 /* container */
 .flex {
-    display: flex;
-  }
-  
-  .flex-column {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .center {
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .btw {
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .gap-40 {
-    gap: 40px;
-  }
-  
-  .padding-10 {
-    padding: 10px;
-  
-  }
-  
-  .padding-20 {
-    padding: 20px;
-  
-  }
-  
-  /* MARGIN */
-  
-  .margin-10 {
-    margin: 10px;
-  }
-  
-  .margin-20 {
-    margin: 20px;
-  }
-  
-  .margin-40 {
-    margin: 40px;
-  }
-  
-  /* CARD */
-  
-  .borderCard {
-    border-radius: 20px;
-    background: linear-gradient(170deg, rgba(58, 56, 56, 0.623) 0%, rgb(31, 31, 31) 100%);
-    box-shadow: 0 25px 50px rgba(0,0,0,0.55);
-  }
+  display: flex;
+}
 
-  .borderCardWhite {
-    border-radius: 50px;
-    background: #e0e0e0;
-    box-shadow: 20px 20px 60px #bebebe,
-               -20px -20px 60px #ffffff;
-  }
-  
-  .border-radius {
-    border-radius: 10px;
-  }
-  
-  .bg-ligth {
-    background-color: #F0EAF9;
-  
-  }
-  
-  
-  
-  /* WIDTH */
-  
-  .w-100 {
-    width: 100%;
-  }
-  
-  .w-80 {
-    width: 80%;
-  }
-  
-  .w-60 {
-    width: 60%;
-  }
-  
-  .w-40 {
-    width: 40%;
-  }
-  
-  /* BUTTON */
-  
-  .myBtn {
-    position: relative;
-    display: inline-block;
-    /* margin: 15px; */
-    padding: 5px 10px;
-    text-align: center;
-    font-size: 18px;
-    letter-spacing: 1px;
-    text-decoration: none;
-    color: #8D50FF;
-    background: transparent;
-    cursor: pointer;
-    transition: ease-out 0.8s;
-    border: 2px solid #8D50FF;
-    border-radius: 10px;
-    box-shadow: inset 0 0 0 0 #8D50FF;
-  } .myBtn:hover {
-    color: white;
-    box-shadow: inset 0 -100px 0 0 #8D50FF;
-  } .myBtn.active {
-    color: white;
-    background-color:#8D50FF;
-  }
+.flexRow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.center {
+  justify-content: center;
+  align-items: center;
+}
+
+.btw {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.gap-40 {
+  gap: 40px;
+}
+
+.padding-10 {
+  padding: 10px;
+
+}
+
+.padding-20 {
+  padding: 20px;
+
+}
+
+/* MARGIN */
+
+.margin-10 {
+  margin: 10px;
+}
+
+.margin-20 {
+  margin: 20px;
+}
+
+.margin-40 {
+  margin: 40px;
+}
+
+/* CARD */
+
+.borderCard {
+  border-radius: 20px;
+  background: linear-gradient(170deg, rgba(58, 56, 56, 0.623) 0%, rgb(31, 31, 31) 100%);
+  box-shadow: 0 25px 50px rgba(0,0,0,0.55);
+}
+
+.borderCardWhite {
+  border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow: 20px 20px 60px #bebebe,
+              -20px -20px 60px #ffffff;
+}
+
+.border-radius {
+  border-radius: 10px;
+}
+
+.bg-ligth {
+  background-color: #F0EAF9;
+
+}
+
+
+
+/* WIDTH */
+
+.w-100 {
+  width: 100%;
+}
+
+.w-80 {
+  width: 80%;
+}
+
+.w-60 {
+  width: 60%;
+}
+
+.w-40 {
+  width: 40%;
+}
+
+/* BUTTON */
+
+.myBtn {
+  position: relative;
+  display: inline-block;
+  /* margin: 15px; */
+  padding: 5px 10px;
+  text-align: center;
+  font-size: 18px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: #8D50FF;
+  background: transparent;
+  cursor: pointer;
+  transition: ease-out 0.8s;
+  border: 2px solid #8D50FF;
+  border-radius: 10px;
+  box-shadow: inset 0 0 0 0 #8D50FF;
+} .myBtn:hover {
+  color: white;
+  box-shadow: inset 0 -100px 0 0 #8D50FF;
+} .myBtn.active {
+  color: white;
+  background-color:#8D50FF;
+}
   
   
   /* ---------------------------------------------------------------------- */
