--- a/src/components/CodeBlock.css
+++ b/src/components/CodeBlock.css
@@ -1,23 +1,29 @@
 .codeBlock {
-    font-size: 25px;
-    position: relative;
-    padding-left: 10px; /* Space for line numbers */
-    counter-reset: line; /* Reset counter for line numbers */
-  }
-  
-  .codeBlock span {
-    display: block;
-    padding-left: 10px; /* Padding to align text */
-  }
-  
-  /* .codeBlock span::before {
-    content: counter(line); 
-    counter-increment: line; 
-    display: inline-block;
-    width: 30px;
-    margin-right: 50px;
-    margin-bottom: 10px;
-    color: #888;
-    text-align: right; 
-  } */
-  
+  background-color: #1e1e1e;
+  color: #d4d4d4;
+  font-family: 'Courier New', Courier, monospace;
+  padding: 20px;
+  border-radius: 5px;
+  white-space: pre-wrap;
+  line-height: 1.5;
+  overflow-x: auto;
+}
+
+.codeBlock span {
+  display: block;
+}
+
+.codeBlock .keyword { color: #569cd6; }
+.codeBlock .string { color: #ce9178; }
+.codeBlock .number { color: #b5cea8; }
+.codeBlock .property { color: #9cdcfe; }
+.codeBlock .comment { color: #6a9955; }
+
+
+/* prism-vsdark.css */
+
+.token.property { color: #80b1ff; }
+.token.punctuation { color: #999; }
+.token.string { color: #c39999; }
+.token.number { color: #d95b43; }
+.token.keyword { color: #a79173; }
