--- a/src/components/VSC/VSC.css
+++ b/src/components/VSC/VSC.css
@@ -22,6 +22,7 @@
   border-right: 1px solid gray;
   background-color: #2d2d2d;
   cursor: pointer;
+
 }
 
 .tab.activeTab {
@@ -65,4 +66,29 @@
 .scrollableContent::-webkit-scrollbar-thumb {
   background-color: #333; /* Color del "thumb" (la parte deslizante de la barra) */
   border-radius: 5px; /* Borde redondeado del "thumb" */
+}
+
+@media (max-width: 1025px) {
+  .boxVSC {
+    width: 90%;
+  }
+
+  .boxHeaderVSC img {
+    width: 20px;
+  }
+
+  .tab {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 700px) {
+  .tab {
+    font-size: 13px;
+    padding: 5px;
+  }
+
+  .boxHeaderVSC img {
+    width: 15px;
+  }
 }
