--- a/src/components/BtnLink/BtnLink.css
+++ b/src/components/BtnLink/BtnLink.css
@@ -12,6 +12,7 @@
     transition: background-color 0.3s ease;
     margin-top: 20px;
     margin-right: 10px;
+    cursor: pointer;
 }
 
 .BtnLink:hover {
