--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -71,7 +71,6 @@
 
 .cardProject {
     margin: 15px;
-    
     position: relative;
     display: flex;
     justify-content: center;
@@ -120,6 +119,10 @@
 
 
 @media screen and (max-width: 1440px) {
+    .boxH3 {
+        width: 90%;
+    }
+
     .flexCenter {
         flex-direction: column;
     }
@@ -169,9 +172,20 @@
 }
 
 @media screen and (max-width: 400px) {
-    
-
-    .boxH3 {
-        width: 90%;
+    .cardProject {
+        margin: 15px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px; 
+        width: 95%;
+        height: 100%;
+        padding:10px;
+        box-sizing: border-box;
+        
+        
+        /* overflow: hidden; */
     }
+    
 }
