--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -17,6 +17,7 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+    margin: 10px;
 }
 
 .boxskills > li > img {
