--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -12,6 +12,21 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+
+    view-timeline-name: --reveal;
+
+    animation-name: project;
+    animation-fill-mode: both;
+
+    animation-timeline: --reveal;
+    animation-range: entry 25% cover 50%;
+} @keyframes project {
+    from {
+        opacity: 0; scale: 10%
+    }
+    to {
+        opacity: 1; scale: 100%;
+    }
 }
 
 
