--- a/src/components/Greeting/Greeting.css
+++ b/src/components/Greeting/Greeting.css
@@ -1,15 +1,15 @@
 .boxGreeting {
-    display: -webkit-box; /* prefijo para Safari */
-    display: -ms-flexbox;/* prefijo para IE */
+    display: -webkit-box; 
+    display: -ms-flexbox;
     display: flex;
     flex-direction: column;
     
     margin: 30px;
-    padding-bottom: 50px;
+    padding: 50px;
 }
 
 .helloImg {
-    display: -ms-grid; /* prefijo para IE */
+    display: -ms-grid;
     width: 100%;
     height: 100%;
     display: grid;
@@ -21,14 +21,18 @@
 
 .textStart {
     justify-content: start;
-    font-size: 28px;
+    font-size: 25px;
+    width: 100%;
 }
 
 .imgMen {
     width: 300px;
     z-index: 2;
     position:static;
-    
+    border: none; /* Elimina cualquier borde predeterminado */
+    box-shadow: 0 0 20px 10px rgba(160, 216, 107, 0.29); /* Ajusta el color y la intensidad del difuminado */
+    border-radius: 10px; /* Opcional: para bordes redondeados */
+    margin-bottom: 20px;
 }
 
 .divMen {
@@ -87,8 +91,10 @@
     }
 
     .imgMen {
-        width: 350px;        
+        width: 240px;        
     }
+
+
 
     .boxGreeting {
         margin: 15px;
@@ -96,13 +102,13 @@
 }
 
 @media screen and (max-width: 1026px) {
-    .imgMen {
-        width: 240px;        
-    }
-    
 
     .boxMyDescription {
         width: 100%;
+    }
+
+    .textStart {
+        text-align: center;
     }
 
     .helloImg {
@@ -120,10 +126,7 @@
         width: 100%;
     }
 
-    .textStart {
-        text-align: center;
     
-    }
 
     .boxMyDescription {
         width: 100%;
