--- a/src/components/VSC/VSC.css
+++ b/src/components/VSC/VSC.css
@@ -5,14 +5,20 @@
   width: 100%;
   background-color: #1e1e1e;
   color: #d4d4d4;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   margin-bottom: 50px;
 }
 
 .boxHeaderVSC {
   display: flex;
   background-color: #333;
+  border-radius: 15px 15px 0 0;
+
   /* padding: 10px; */
+}
+
+.border-one {
+  border-radius: 15px 0 0 0;
 }
 
 .tab {
@@ -22,7 +28,6 @@
   border-right: 1px solid gray;
   background-color: #2d2d2d;
   cursor: pointer;
-
 }
 
 .tab.activeTab {
