--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 .color2 {
   color: #9fd86b;
 }
@@ -12,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 0px;
 }
 
 .flexBetween {
@@ -23,7 +21,7 @@
 }
 
 .hello {
-    position: relative;
+  position: relative;
 }
 
 .reverse {
@@ -36,9 +34,7 @@
   z-index: -1;
 }
 
-
 /* ----------------GLOVAL STYLES------------------ */
-
 
 /* container */
 .flex {
@@ -72,12 +68,10 @@
 
 .padding-10 {
   padding: 10px;
-
 }
 
 .padding-20 {
   padding: 20px;
-
 }
 
 /* MARGIN */
@@ -98,15 +92,18 @@
 
 .borderCard {
   border-radius: 20px;
-  background: linear-gradient(170deg, rgba(58, 56, 56, 0.623) 0%, rgb(31, 31, 31) 100%);
-  box-shadow: 0 25px 50px rgba(0,0,0,0.55);
+  background: linear-gradient(
+    170deg,
+    rgba(58, 56, 56, 0.623) 0%,
+    rgb(31, 31, 31) 100%
+  );
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.55);
 }
 
 .borderCardWhite {
   border-radius: 50px;
   background: #e0e0e0;
-  box-shadow: 20px 20px 60px #bebebe,
-              -20px -20px 60px #ffffff;
+  box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
 }
 
 .border-radius {
@@ -114,11 +111,8 @@
 }
 
 .bg-ligth {
-  background-color: #F0EAF9;
-
+  background-color: #f0eaf9;
 }
-
-
 
 /* WIDTH */
 
@@ -149,21 +143,21 @@
   font-size: 18px;
   letter-spacing: 1px;
   text-decoration: none;
-  color: #8D50FF;
+  color: #8d50ff;
   background: transparent;
   cursor: pointer;
   transition: ease-out 0.8s;
-  border: 2px solid #8D50FF;
+  border: 2px solid #8d50ff;
   border-radius: 10px;
-  box-shadow: inset 0 0 0 0 #8D50FF;
-} .myBtn:hover {
-  color: white;
-  box-shadow: inset 0 -100px 0 0 #8D50FF;
-} .myBtn.active {
-  color: white;
-  background-color:#8D50FF;
+  box-shadow: inset 0 0 0 0 #8d50ff;
 }
-  
-  
-  /* ---------------------------------------------------------------------- */
+.myBtn:hover {
+  color: white;
+  box-shadow: inset 0 -100px 0 0 #8d50ff;
+}
+.myBtn.active {
+  color: white;
+  background-color: #8d50ff;
+}
 
+/* ---------------------------------------------------------------------- */
