--- a/src/components/BtnLink/BtnLink.css
+++ b/src/components/BtnLink/BtnLink.css
@@ -1,33 +1,33 @@
 .BtnLink {
-    display: flex;
-    padding: 5px 10px;
-    color: #000000;
-    background-color: #9fd86b;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    text-align: center;
-    justify-content: center;
-    font-size: 20px;
-    transition: background-color 0.3s ease;
-    margin-top: 20px;
-    margin-right: 10px;
-    cursor: pointer;
+  display: flex;
+  padding: 5px 10px;
+  color: #000000;
+  background-color: #9fd86b;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  text-align: center;
+  justify-content: center;
+  font-size: 20px;
+  transition: background-color 0.3s ease;
+  margin-top: 20px;
+  margin-right: 10px;
+  cursor: pointer;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.25);
 }
 
 .BtnLink:hover {
-    background-color: #d1fca9;
-    transform:translateY(-5px);
-    transition: all 0.3s ease-in-out;
+  background-color: #d1fca9;
+  transform: translateY(-5px);
+  transition: all 0.3s ease-in-out;
 }
 
 .BtnLink:active {
-    background-color: #616161;
+  background-color: #616161;
 }
 
 @media screen and (max-width: 621px) {
-    .BtnLink {
-        padding: 7px 15px;
-        
-    }
+  .BtnLink {
+    padding: 7px 15px;
+  }
 }
