--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 body {
-    color: #fff;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.2rem;
-    margin: 0;
-    padding: 5px;
-    font-family: inherit;
+  color: #fff;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1rem;
+  margin: 0;
+  padding: 5px;
+  font-family: inherit;
 }
-
